--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "./lib/parseDomain.js",
   "scripts": {
     "test": "node node_modules/mocha/bin/mocha -R spec",
-    "build-regex": "node lib/build/buildRegex.js"
+    "download-tld": "curl https://publicsuffix.org/list/effective_tld_names.dat > lib/build/tld.txt",
+    "build-regex": "node lib/build/buildRegex.js",
+    "update-regex": "npm run download-tld && npm run build-regex && npm run test"
   },
   "keywords": [
     "domain",
