--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Splits an url into sub-domain, domain and top-level-domain",
   "main": "./lib/parseDomain.js",
   "scripts": {
-    "test": "node node_modules/mocha/bin/mocha -R spec",
+    "test": "mocha -R spec",
     "download-tld": "curl https://publicsuffix.org/list/effective_tld_names.dat > lib/build/tld.txt",
     "build-regex": "node lib/build/buildRegex.js",
     "update-regex": "npm run download-tld && npm run build-regex && npm run test"
@@ -20,27 +20,13 @@
     "country",
     "top-level"
   ],
-  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/peerigon/parse-domain.git"
   },
-  "testling": {
-    "harness": "mocha",
-    "files": "test/parseDomain.test.js",
-    "browsers": [
-      "ie/8..latest",
-      "chrome/27..latest",
-      "firefox/22..latest",
-      "safari/latest",
-      "opera/latest",
-      "iphone/latest",
-      "ipad/latest",
-      "android-browser/latest"
-    ]
-  },
   "author": "peerigon <developers@peerigon.com>",
   "license": "Unlicense",
+  "dependencies": {},
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^2.4.5"
