--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "./lib/parseDomain.js",
   "scripts": {
     "test": "mocha -R spec",
+    "posttest": "eslint lib test",
+    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha",
     "download-tld": "curl https://publicsuffix.org/list/public_suffix_list.dat > lib/build/tld.txt",
     "build-regex": "node lib/build/buildRegex.js",
     "update-regex": "npm run download-tld && npm run build-regex && npm run test"
@@ -29,6 +31,9 @@
   "dependencies": {},
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^3.1.0"
+    "eslint": "^3.7.1",
+    "eslint-config-peerigon": "^6.0.0",
+    "eslint-plugin-jsdoc": "^2.3.1",
+    "mocha": "^3.1.2"
   }
 }
