--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "chai": "^4.1.2",
     "eslint": "^4.12.1",
     "eslint-config-peerigon": "^12.0.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsdoc": "^3.2.0",
     "mocha": "^4.0.1",
     "standard-version": "^4.2.0"
   }
