--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,8 @@
 {
     "extends": [
         "peerigon/base",
-        "peerigon/es5"
+        "peerigon/node"
     ],
-    "parserOptions": {
-        "ecmaVersion": 5
-    },
     "env": {
         "node": true
     },
