--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Splits an url into sub-domain, domain and effective top-level-domain",
   "main": "./lib/parseDomain.js",
   "scripts": {
-    "test": "mocha -R spec",
+    "test": "nyc mocha -R spec",
     "posttest": "eslint lib test",
-    "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha",
     "download-tld": "curl https://publicsuffix.org/list/public_suffix_list.dat > lib/build/tld.txt",
     "build-regex": "node lib/build/buildRegex.js",
     "update-regex": "npm run download-tld && npm run build-regex && npm run test",
@@ -37,6 +36,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsdoc": "^3.2.0",
     "mocha": "^4.0.1",
+    "nyc": "^11.3.0",
     "standard-version": "^4.2.0"
   }
 }
