--- a/package.json
+++ b/package.json
@@ -1,44 +1,33 @@
 {
-  "name": "parse-domain",
-  "version": "2.0.0",
-  "description": "Splits an url into sub-domain, domain and effective top-level-domain",
-  "main": "./lib/parseDomain.js",
-  "scripts": {
-    "test": "nyc mocha -R spec",
-    "posttest": "eslint lib test",
-    "update-lists": "node tools/updateLists.js",
-    "release": "standard-version"
-  },
-  "keywords": [
-    "domain",
-    "url",
-    "sub-domain",
-    "tld",
-    "parse",
-    "extract",
-    "sanitize",
-    "country",
-    "top-level"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/peerigon/parse-domain.git"
-  },
-  "author": "peerigon <developers@peerigon.com>",
-  "license": "Unlicense",
-  "dependencies": {},
-  "devDependencies": {
-    "chai": "^4.1.2",
-    "eslint": "^4.12.1",
-    "eslint-config-peerigon": "^12.0.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsdoc": "^3.2.0",
-    "got": "^8.0.1",
-    "mocha": "^4.0.1",
-    "nyc": "^11.3.0",
-    "standard-version": "^4.2.0"
-  },
-  "files": [
-    "lib"
-  ]
+    "name": "parse-domain",
+    "version": "2.0.0",
+    "description": "Splits an url into sub-domain, domain and effective top-level-domain",
+    "main": "./lib/parseDomain.js",
+    "scripts": {
+        "test": "nyc mocha -R spec",
+        "test:after-fetch": "mocha -R dot",
+        "posttest": "eslint lib test",
+        "release": "standard-version"
+    },
+    "keywords": ["domain", "url", "sub-domain", "tld", "parse", "extract", "sanitize", "country", "top-level"],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/peerigon/parse-domain.git"
+    },
+    "author": "peerigon <developers@peerigon.com>",
+    "license": "Unlicense",
+    "dependencies": {
+        "chai": "^4.1.2",
+        "got": "^8.0.1",
+        "mocha": "^4.0.1"
+    },
+    "devDependencies": {
+        "eslint": "^4.12.1",
+        "eslint-config-peerigon": "^12.0.1",
+        "eslint-plugin-import": "^2.8.0",
+        "eslint-plugin-jsdoc": "^3.2.0",
+        "nyc": "^11.3.0",
+        "standard-version": "^4.2.0"
+    },
+    "files": ["lib"]
 }
