--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,4 @@ node_modules
 .node_repl_history
 
 # We don't check in the compiled lists. They are created upon npm publish and npm install.
-build/lists
+build/tries
