--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ node_modules
 
 # Optional REPL history
 .node_repl_history
+
+# We don't check in the compiled lists. They are created upon npm publish and npm install.
+build/tries
