--- a/package.json
+++ b/package.json
@@ -1,45 +1,52 @@
 {
-  "name": "parse-domain",
-  "version": "2.0.0",
-  "description": "Splits an url into sub-domain, domain and effective top-level-domain",
-  "main": "./lib/parseDomain.js",
-  "scripts": {
-    "test": "nyc mocha -R spec",
-    "posttest": "eslint lib test",
-    "download-tld": "curl https://publicsuffix.org/list/public_suffix_list.dat > lib/build/tld.txt",
-    "build-regex": "node lib/build/buildRegex.js",
-    "update-regex": "npm run download-tld && npm run build-regex && npm run test",
-    "release": "standard-version"
-  },
-  "keywords": [
-    "domain",
-    "url",
-    "sub-domain",
-    "tld",
-    "parse",
-    "extract",
-    "sanitize",
-    "country",
-    "top-level"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/peerigon/parse-domain.git"
-  },
-  "author": "peerigon <developers@peerigon.com>",
-  "license": "Unlicense",
-  "dependencies": {},
-  "devDependencies": {
-    "chai": "^4.1.2",
-    "eslint": "^4.12.1",
-    "eslint-config-peerigon": "^12.0.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsdoc": "^3.2.0",
-    "mocha": "^4.0.1",
-    "nyc": "^11.3.0",
-    "standard-version": "^4.2.0"
-  },
-  "files": [
-    "lib"
-  ]
+    "name": "parse-domain",
+    "version": "2.0.0",
+    "description": "Splits an url into sub-domain, domain and effective top-level-domain",
+    "main": "./lib/parseDomain.js",
+    "scripts": {
+        "test": "nyc mocha -R spec",
+        "posttest": "eslint lib test",
+        "postinstall": "node scripts/build-tries.js",
+        "prepublish": "node scripts/write-pre.js",
+        "release": "standard-version"
+    },
+    "keywords": [
+        "domain",
+        "url",
+        "sub-domain",
+        "tld",
+        "parse",
+        "extract",
+        "sanitize",
+        "country",
+        "top-level"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/peerigon/parse-domain.git"
+    },
+    "author": "peerigon <developers@peerigon.com>",
+    "license": "Unlicense",
+    "dependencies": {
+        "chai": "^4.1.2",
+        "fs-copy-file-sync": "^1.1.1",
+        "got": "^8.0.1",
+        "mkdirp": "^0.5.1",
+        "mocha": "^4.0.1"
+    },
+    "devDependencies": {
+        "eslint": "^4.12.1",
+        "eslint-config-peerigon": "^12.0.1",
+        "eslint-plugin-import": "^2.8.0",
+        "eslint-plugin-jsdoc": "^3.2.0",
+        "nyc": "^11.3.0",
+        "standard-version": "^4.2.0"
+    },
+    "files": [
+        "lib",
+        "scripts",
+        "lists",
+        "test",
+        "build/tries/pre"
+    ]
 }
