--- a/package.json
+++ b/package.json
@@ -27,14 +27,13 @@
   },
   "author": "peerigon <developers@peerigon.com>",
   "license": "Unlicense",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "chai": "^4.1.2",
     "fs-copy-file-sync": "^1.1.1",
     "got": "^8.0.1",
     "mkdirp": "^0.5.1",
-    "mocha": "^4.0.1"
-  },
-  "devDependencies": {
+    "mocha": "^4.0.1",
     "eslint": "^4.12.1",
     "eslint-config-peerigon": "^12.0.1",
     "eslint-plugin-import": "^2.8.0",
