--- a/.babelrc
+++ b/.babelrc
@@ -1,1 +1,15 @@
-{ "presets": ["es2015"] }
+{
+  "presets": [
+    ["@babel/preset-env", {
+      "targets": {
+        "browsers": [
+          "last 2 version",
+          "> 1%",
+          "ie >= 10",
+          "not dead"
+        ],
+        "node": "6"
+      }
+    }]
+  ]
+}
