--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "Splits an url into sub-domain, domain and effective top-level-domain",
   "main": "./lib/parseDomain.js",
   "scripts": {
-    "test": "nyc mocha -R spec",
-    "posttest": "eslint lib test",
+    "build": "babel src --out-dir lib",
+    "clean": "rimraf lib",
     "postinstall": "node scripts/build-tries.js",
+    "posttest": "eslint src test",
     "prepare": "node scripts/write-pre.js",
-    "release": "standard-version"
+    "prepublish": "npm run build",
+    "release": "standard-version",
+    "test": "nyc mocha -R spec"
   },
   "keywords": [
     "domain",
@@ -35,15 +38,19 @@
     "mocha": "^4.0.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.54",
+    "@babel/core": "^7.0.0-beta.54",
+    "@babel/preset-env": "^7.0.0-beta.54",
     "eslint": "^4.12.1",
     "eslint-config-peerigon": "^12.0.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsdoc": "^3.2.0",
     "nyc": "^11.3.0",
+    "rimraf": "^2.6.2",
     "standard-version": "^4.2.0"
   },
   "files": [
-    "lib",
+    "src",
     "scripts",
     "lists",
     "test",
