--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "mocha": "^4.0.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.54",
-    "@babel/core": "^7.0.0-beta.54",
-    "@babel/preset-env": "^7.0.0-beta.54",
+    "@babel/cli": "7.0.0",
+    "@babel/core": "7.0.0",
+    "@babel/preset-env": "7.0.0",
     "eslint": "^4.12.1",
     "eslint-config-peerigon": "^12.0.1",
     "eslint-plugin-import": "^2.8.0",
