fix: Re-add missing prepare script after commit 228c90ba2aa2e96bc4f6b45977b48522971d342a

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "nyc mocha -R spec",
     "posttest": "eslint lib test",
     "postinstall": "node scripts/build-tries.js",
+    "prepare": "node scripts/build-tries.js",
     "release": "standard-version"
   },
   "keywords": [
