Remove targets in babelrc
We want to compile it down to ES5

--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,5 @@
 {
   "presets": [
-    ["@babel/preset-env", {
-      "targets": {
-        "browsers": [
-          "last 2 version",
-          "> 1%",
-          "ie >= 10",
-          "not dead"
-        ],
-        "node": "6"
-      }
-    }]
+    ["@babel/preset-env"]
   ]
 }
