--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "./lib/parseDomain.js",
   "scripts": {
     "build": "run-p build:lib build:tries",
-    "build:lib": "babel src --out-dir lib",
+    "build:lib": "run-s build:lib:clean build:lib:babel",
+    "build:lib:clean": "rimraf lib",
+    "build:lib:babel": "babel src --out-dir lib",
     "build:tries": "node scripts/build-tries.js",
-    "clean": "rimraf lib",
     "postinstall": "npm run build:tries",
     "prepublish": "npm run build",
     "release": "standard-version",
+    "pretest": "run-s build:lib:clean pretest:link",
+    "pretest:link": "node scripts/link-src.js",
     "test": "nyc mocha -R spec",
     "posttest": "eslint src test"
   },
