--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "Splits an url into sub-domain, domain and effective top-level-domain",
   "main": "./lib/parseDomain.js",
   "scripts": {
+    "build": "run-s build:lib build:tries",
+    "build:lib": "run-s build:lib:clean build:lib:babel",
+    "build:lib:clean": "rimraf lib",
+    "build:lib:babel": "babel src --out-dir lib",
+    "build:tries": "node scripts/build-tries.js",
+    "postinstall": "npm run build:tries",
+    "prepublish": "npm run build",
+    "release": "standard-version",
+    "pretest": "run-s build:lib:clean pretest:link",
+    "pretest:link": "node scripts/link-src.js",
     "test": "nyc mocha -R spec",
-    "posttest": "eslint lib test",
-    "postinstall": "node scripts/build-tries.js",
-    "prepare": "node scripts/build-tries.js",
-    "release": "standard-version"
+    "posttest": "eslint src test"
   },
   "keywords": [
     "domain",
@@ -34,15 +41,19 @@
     "mocha": "^4.0.1"
   },
   "devDependencies": {
+    "@babel/cli": "7.0.0",
+    "@babel/core": "7.0.0",
+    "@babel/preset-env": "7.0.0",
     "eslint": "^4.12.1",
     "eslint-config-peerigon": "^12.0.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsdoc": "^3.2.0",
+    "npm-run-all": "^4.1.3",
     "nyc": "^11.3.0",
+    "rimraf": "^2.6.2",
     "standard-version": "^4.2.0"
   },
   "files": [
-    "lib",
     "scripts",
     "lists",
     "test",
