--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "pretest": "run-s build:lib:clean pretest:link",
     "pretest:link": "node scripts/link-src.js",
     "test": "nyc mocha -R spec",
-    "posttest": "eslint src test"
+    "posttest": "eslint src test",
+    "update": "updtr"
   },
   "keywords": [
     "domain",
@@ -35,23 +36,24 @@
   "author": "peerigon <developers@peerigon.com>",
   "license": "Unlicense",
   "dependencies": {
-    "chai": "^4.1.2",
-    "got": "^8.0.1",
+    "chai": "^4.2.0",
+    "got": "^8.3.2",
     "mkdirp": "^0.5.1",
-    "mocha": "^4.0.1"
+    "mocha": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/cli": "7.0.0",
-    "@babel/core": "7.0.0",
-    "@babel/preset-env": "7.0.0",
-    "eslint": "^4.12.1",
-    "eslint-config-peerigon": "^12.0.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsdoc": "^3.2.0",
-    "npm-run-all": "^4.1.3",
-    "nyc": "^11.3.0",
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "eslint": "^5.9.0",
+    "eslint-config-peerigon": "^15.0.2",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsdoc": "^3.9.1",
+    "npm-run-all": "^4.1.5",
+    "nyc": "^13.1.0",
     "rimraf": "^2.6.2",
-    "standard-version": "^4.2.0"
+    "standard-version": "^4.4.0",
+    "updtr": "^3.1.0"
   },
   "files": [
     "lib",
