--- a/package.json
+++ b/package.json
@@ -36,21 +36,21 @@
   "author": "peerigon <developers@peerigon.com>",
   "license": "Unlicense",
   "dependencies": {
-    "chai": "^4.2.0",
     "got": "^8.3.2",
-    "mkdirp": "^0.5.1",
-    "mocha": "^5.2.0"
+    "mkdirp": "^0.5.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
+    "chai": "^4.2.0",
     "eslint": "^5.9.0",
     "eslint-config-peerigon": "^15.0.2",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsdoc": "^3.9.1",
     "npm-run-all": "^4.1.5",
     "nyc": "^13.1.0",
+    "mocha": "^5.2.0",
     "rimraf": "^2.6.2",
     "standard-version": "^4.4.0",
     "updtr": "^3.1.0"
