feat: Remove runtime dependency on npm
Closes https://github.com/peerigon/parse-domain/issues/52

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build:lib:clean": "rimraf lib",
     "build:lib:babel": "babel src --out-dir lib",
     "build:tries": "node scripts/build-tries.js",
-    "postinstall": "npm run build:tries",
-    "prepublish": "npm run build",
+    "postinstall": "run-s build:tries",
+    "prepublish": "run-s build",
     "release": "standard-version",
     "pretest": "run-s build:lib:clean pretest:link",
     "pretest:link": "node scripts/link-src.js",
