--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "chai": "^4.2.0",
     "got": "^8.3.2",
     "mkdirp": "^0.5.1",
-    "mocha": "^6.1.4"
+    "mocha": "^6.1.4",
+    "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
@@ -49,7 +50,6 @@
     "eslint-config-peerigon": "^17.1.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsdoc": "^4.8.4",
-    "npm-run-all": "^4.1.5",
     "nyc": "^14.1.1",
     "rimraf": "^2.6.3",
     "standard-version": "^6.0.1",
