--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.2.1",
   "description": "Splits an url into sub-domain, domain and effective top-level-domain",
   "main": "./lib/parseDomain.js",
+  "types": "./lib/index.d.ts",
   "scripts": {
     "build": "run-s build:lib build:tries",
     "build:lib": "run-s build:lib:clean build:lib:babel",
