this could work as well

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.3.1",
   "description": "Splits an url into sub-domain, domain and effective top-level-domain",
   "main": "./lib/parseDomain.js",
-  "types": "./src/index.d.ts",
+  "types": "./lib/index.d.ts",
   "scripts": {
     "build": "run-s build:lib build:tries",
     "build:lib": "run-s build:lib:clean build:lib:babel",
