--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "release": "standard-version",
     "pretest": "run-s build:lib:clean pretest:link",
     "pretest:link": "node scripts/link-src.js",
-    "test": "nyc mocha -R spec",
+    "test": "jest",
     "posttest": "eslint src test",
     "update": "updtr"
   },
@@ -37,10 +37,9 @@
   "author": "peerigon <developers@peerigon.com>",
   "license": "Unlicense",
   "dependencies": {
-    "chai": "^4.2.0",
     "got": "^8.3.2",
+    "jest": "^24.9.0",
     "mkdirp": "^0.5.1",
-    "mocha": "^6.1.4",
     "npm-run-all": "^4.1.5"
   },
   "devDependencies": {
@@ -51,7 +50,6 @@
     "eslint-config-peerigon": "^17.1.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsdoc": "^4.8.4",
-    "nyc": "^14.1.1",
     "rimraf": "^2.6.3",
     "standard-version": "^6.0.1",
     "updtr": "^3.1.0"
