chore: Replace mocha and chai with jest (#81)
* Run jest codemod on tests
* Replace mocha with jest
* Fix .travis.yml
* Disable collectCoverage for now

There's currently a problem with collecting the coverage data on Travis
in combination with our scripts/link-src.js approach.
Seems like Jest is handling symlinks inconsistenly on macOS and Linux.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ script:
 
 after_success:
   - npm install coveralls
-  - npm run coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+  - cat ./tests/coverage/lcov.info | coveralls
