--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
   "scripts": {
     "build": "run-s build:lib build:tries",
     "build:lib": "run-s build:lib:clean build:lib:babel",
-    "build:lib:clean": "rimraf lib",
-    "build:lib:babel": "babel src --out-dir lib",
     "build:tries": "node scripts/build-tries.js",
-    "postinstall": "run-s build:tries",
-    "prepublish": "run-s build",
     "release": "standard-version",
     "pretest": "run-s build:lib:clean pretest:link",
     "pretest:link": "node scripts/link-src.js",
@@ -38,20 +34,38 @@
   "license": "Unlicense",
   "dependencies": {
     "got": "^8.3.2",
-    "jest": "^24.9.0",
+    "isomorphic-fetch": "^2.2.1",
     "mkdirp": "^0.5.1",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "p-timeout": "^3.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
+    "@types/isomorphic-fetch": "0.0.35",
+    "@types/jest": "^24.0.18",
+    "@types/nock": "^10.0.3",
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
+    "@typescript-eslint/parser": "^2.0.0",
     "eslint": "^5.16.0",
-    "eslint-config-peerigon": "^17.1.0",
+    "eslint-config-peerigon": "^24.0.0",
+    "eslint-import-resolver-typescript": "^1.1.1",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsdoc": "^4.8.4",
+    "eslint-plugin-no-null": "^1.0.2",
+    "eslint-plugin-prefer-arrow": "^1.1.5",
+    "i": "^0.3.6",
+    "jest": "^24.9.0",
+    "nock": "^10.0.6",
+    "npm": "^6.11.2",
+    "prettier": "^1.18.2",
+    "promise": "^8.0.3",
     "rimraf": "^2.6.3",
     "standard-version": "^6.0.1",
+    "ts-jest": "^24.0.2",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.3",
     "updtr": "^3.1.0"
   },
   "files": [
