--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "isomorphic-fetch": "^2.2.1",
     "mkdirp": "^0.5.1",
     "npm-run-all": "^4.1.5",
-    "p-timeout": "^3.1.0"
+    "p-timeout": "^3.1.0",
+    "punycode": "^2.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
