--- a/package.json
+++ b/package.json
@@ -34,11 +34,11 @@
   "license": "Unlicense",
   "dependencies": {
     "got": "^8.3.2",
+    "is-ip": "^3.1.0",
     "isomorphic-fetch": "^2.2.1",
     "mkdirp": "^0.5.1",
     "npm-run-all": "^4.1.5",
-    "p-timeout": "^3.1.0",
-    "punycode": "^2.1.1"
+    "p-timeout": "^3.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
@@ -62,6 +62,7 @@
     "npm": "^6.11.2",
     "prettier": "^1.18.2",
     "promise": "^8.0.3",
+    "punycode": "^2.1.1",
     "rimraf": "^2.6.3",
     "standard-version": "^6.0.1",
     "ts-jest": "^24.0.2",
