--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "parse-domain",
   "version": "2.3.2",
-  "description": "Splits an url into sub-domain, domain and effective top-level-domain",
+  "description": "Splits an url into sub-domain, domain and effective top-level domain",
   "main": "./lib/parseDomain.js",
   "types": "./src/index.d.ts",
   "scripts": {
@@ -28,41 +28,28 @@
   "author": "peerigon <developers@peerigon.com>",
   "license": "Unlicense",
   "dependencies": {
-    "got": "^8.3.2",
-    "is-ip": "^3.1.0",
-    "isomorphic-fetch": "^2.2.1",
-    "mkdirp": "^0.5.1",
-    "npm-run-all": "^4.1.5",
-    "p-timeout": "^3.1.0"
+    "p-timeout": "^3.2.0",
+    "punycode": "^2.1.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
     "@types/isomorphic-fetch": "0.0.35",
-    "@types/jest": "^24.0.18",
-    "@types/nock": "^10.0.3",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "^2.0.0",
-    "eslint": "^5.16.0",
-    "eslint-config-peerigon": "^24.0.0",
-    "eslint-import-resolver-typescript": "^1.1.1",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsdoc": "^4.8.4",
+    "@types/jest": "^25.1.1",
+    "@types/nock": "^11.1.0",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
+    "eslint": "^6.8.0",
+    "eslint-config-peerigon": "^25.3.1",
+    "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-no-null": "^1.0.2",
-    "eslint-plugin-prefer-arrow": "^1.1.5",
-    "i": "^0.3.6",
-    "jest": "^24.9.0",
-    "nock": "^10.0.6",
-    "npm": "^6.11.2",
-    "prettier": "^1.18.2",
-    "promise": "^8.0.3",
-    "punycode": "^2.1.1",
-    "rimraf": "^2.6.3",
-    "standard-version": "^6.0.1",
-    "ts-jest": "^24.0.2",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.5.3",
+    "eslint-plugin-prefer-arrow": "^1.1.7",
+    "jest": "^25.1.0",
+    "nock": "^11.7.2",
+    "prettier": "^1.19.1",
+    "rimraf": "^3.0.1",
+    "standard-version": "^7.1.0",
+    "ts-jest": "^25.1.0",
+    "ts-node": "^8.6.2",
+    "typescript": "^3.7.5",
     "updtr": "^3.1.0"
   },
   "files": [
