--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "author": "peerigon <developers@peerigon.com>",
   "license": "Unlicense",
   "dependencies": {
+    "isomorphic-fetch": "^2.2.1",
     "p-timeout": "^3.2.0",
     "punycode": "^2.1.1"
   },
