--- a/package.json
+++ b/package.json
@@ -1,64 +1,71 @@
 {
-  "name": "parse-domain",
-  "version": "2.3.2",
-  "description": "Splits an url into sub-domain, domain and effective top-level domain",
-  "main": "./lib/parseDomain.js",
-  "types": "./src/index.d.ts",
-  "scripts": {
-    "release": "standard-version",
-    "test": "jest",
-    "posttest": "eslint src --ext ts",
-    "update": "updtr"
-  },
-  "keywords": [
-    "domain",
-    "url",
-    "sub-domain",
-    "tld",
-    "parse",
-    "extract",
-    "sanitize",
-    "country",
-    "top-level"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/peerigon/parse-domain.git"
-  },
-  "author": "peerigon <developers@peerigon.com>",
-  "license": "Unlicense",
-  "dependencies": {
-    "isomorphic-fetch": "^2.2.1",
-    "p-timeout": "^3.2.0",
-    "punycode": "^2.1.1"
-  },
-  "devDependencies": {
-    "@types/isomorphic-fetch": "0.0.35",
-    "@types/jest": "^25.1.1",
-    "@types/nock": "^11.1.0",
-    "@typescript-eslint/eslint-plugin": "^2.18.0",
-    "@typescript-eslint/parser": "^2.18.0",
-    "eslint": "^6.8.0",
-    "eslint-config-peerigon": "^25.3.1",
-    "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-no-null": "^1.0.2",
-    "eslint-plugin-prefer-arrow": "^1.1.7",
-    "jest": "^25.1.0",
-    "nock": "^11.7.2",
-    "prettier": "^1.19.1",
-    "rimraf": "^3.0.1",
-    "standard-version": "^7.1.0",
-    "ts-jest": "^25.1.0",
-    "ts-node": "^8.6.2",
-    "typescript": "^3.7.5",
-    "updtr": "^3.1.0"
-  },
-  "files": [
-    "lib",
-    "scripts",
-    "lists",
-    "test",
-    "build",
-    "src/index.d.ts"
-  ]
+	"name": "parse-domain",
+	"version": "2.3.2",
+	"description": "Splits an url into sub-domain, domain and effective top-level domain",
+	"main": "./lib/parseDomain.js",
+	"types": "./src/index.d.ts",
+	"scripts": {
+		"release": "standard-version",
+		"test": "jest",
+		"posttest": "eslint src --ext ts",
+		"update": "updtr"
+	},
+	"keywords": [
+		"domain",
+		"url",
+		"sub-domain",
+		"tld",
+		"parse",
+		"extract",
+		"sanitize",
+		"country",
+		"top-level"
+	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/peerigon/parse-domain.git"
+	},
+	"author": "peerigon <developers@peerigon.com>",
+	"license": "Unlicense",
+	"files": [
+		"lib",
+		"scripts",
+		"lists",
+		"test",
+		"build",
+		"src/index.d.ts"
+	],
+	"dependencies": {
+		"isomorphic-fetch": "^2.2.1",
+		"p-timeout": "^3.2.0",
+		"punycode": "^2.1.1"
+	},
+	"devDependencies": {
+		"@types/isomorphic-fetch": "0.0.35",
+		"@types/jest": "^25.1.1",
+		"@types/nock": "^11.1.0",
+		"@typescript-eslint/eslint-plugin": "^2.18.0",
+		"@typescript-eslint/parser": "^2.18.0",
+		"eslint": "^6.8.0",
+		"eslint-config-peerigon": "../eslint-config-peerigon",
+		"eslint-import-resolver-typescript": "^2.0.0",
+		"eslint-plugin-no-null": "^1.0.2",
+		"eslint-plugin-prefer-arrow": "^1.1.7",
+		"husky": "^4.2.1",
+		"jest": "^25.1.0",
+		"nock": "^11.7.2",
+		"prettier": "^1.19.1",
+		"pretty-quick": "^2.0.1",
+		"rimraf": "^3.0.1",
+		"standard-version": "^7.1.0",
+		"ts-jest": "^25.1.0",
+		"ts-node": "^8.6.2",
+		"typescript": "^3.7.5",
+		"updtr": "^3.1.0"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "pretty-quick --staged"
+		}
+	}
 }
