--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,10 @@ node_modules
 .node_repl_history
 
 # We don't check in the compiled lists. They are created upon npm publish and npm install.
-build/tries
+build
 
 # Don't include the build target directory.
 lib
+
+# Don't include files written by tests
+src/tests/fs
