--- a/.gitignore
+++ b/.gitignore
@@ -35,11 +35,8 @@ node_modules
 # Optional REPL history
 .node_repl_history
 
-# We don't check in the compiled lists. They are created upon npm publish and npm install.
+# We don't check in the compiled files. They are created upon npm publish and npm install.
 build
-
-# Don't include the build target directory.
-lib
 
 # Don't include files written by tests
 src/tests/fs
