--- a/package.json
+++ b/package.json
@@ -2,17 +2,19 @@
 	"name": "parse-domain",
 	"version": "2.3.2",
 	"description": "Splits an url into sub-domain, domain and effective top-level domain",
-	"main": "./lib/parseDomain.js",
+	"main": "./build-cjs/main.js",
 	"scripts": {
 		"release": "standard-version",
 		"test": "jest",
 		"test:lint": "eslint *.js src --ext ts",
 		"posttest": "npm run test:lint",
-		"build": "tsc -p ./tsconfig.build.es5.json",
-		"update": "updtr"
+		"build": "tsc -p ./tsconfig.build-cjs.json",
+		"update:psl-fixture": "ts-node ./scripts/update-psl-fixture.ts",
+		"update:tries": "ts-node ./scripts/update-psl.ts",
+		"update:dependencies": "updtr"
 	},
 	"bin": {
-		"update": "./lib/bin/update.js"
+		"update": "./bin/update.js"
 	},
 	"keywords": [
 		"domain",
@@ -52,7 +54,7 @@
 		"@types/punycode": "^2.1.0",
 		"@typescript-eslint/parser": "^2.18.0",
 		"eslint": "^6.8.0",
-		"eslint-config-peerigon": "^26.0.0-beta.3",
+		"eslint-config-peerigon": "^27.1.3",
 		"eslint-import-resolver-typescript": "^2.0.0",
 		"eslint-plugin-no-null": "^1.0.2",
 		"eslint-plugin-prefer-arrow": "^1.1.7",
