--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
 	"description": "Splits an url into sub-domain, domain and effective top-level domain",
 	"main": "./build-cjs/main.js",
 	"scripts": {
-		"release": "standard-version",
 		"test": "jest",
-		"test:lint": "eslint *.js src --ext ts",
-		"posttest": "npm run test:lint",
-		"build": "tsc -p ./tsconfig.build-cjs.json",
+		"posttest": "run-p posttest:*",
+		"posttest:lint": "eslint *.js src --ext ts",
+		"build": "run-s build:*",
+		"build:cleanup": "rimraf build-cjs build-esm",
+		"build:tsc": "run-p build:tsc:cjs build:tsc:esm",
+		"build:tsc:cjs": "tsc -p ./tsconfig.build-cjs.json",
+		"build:tsc:esm": "tsc -p ./tsconfig.build-esm.json",
 		"update:psl-fixture": "ts-node --transpile-only ./src/scripts/update-psl-fixture.ts",
-		"update:tries": "ts-node --transpile-only ./src/scripts/update-tries.ts",
+		"update:tries": "ts-node --transpile-only ./src/scripts/update-tries.ts ./build-cjs/serialized-tries  ./build-esm/serialized-tries",
 		"update:dependencies": "updtr"
 	},
 	"bin": {
@@ -43,7 +46,6 @@
 	],
 	"dependencies": {
 		"isomorphic-fetch": "^2.2.1",
-		"p-timeout": "^3.2.0",
 		"punycode": "^2.1.1"
 	},
 	"devDependencies": {
@@ -61,10 +63,10 @@
 		"husky": "^4.2.1",
 		"jest": "^25.1.0",
 		"nock": "^11.7.2",
+		"npm-run-all": "^4.1.5",
 		"prettier": "^1.19.1",
 		"pretty-quick": "^2.0.1",
 		"rimraf": "^3.0.1",
-		"standard-version": "^7.1.0",
 		"ts-jest": "^25.1.0",
 		"ts-node": "^8.6.2",
 		"typescript": "^3.7.5",
