--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,9 +16,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-      - name: npm install, build, and test
+      - name: npm install and test
         run: |
-          npm install --ignore-scripts
+          npm ci --ignore-scripts
           npm test
         env:
           CI: true
