feat: Trigger beta release for next major version
BREAKING CHANGE: This is a complete rewrite with a changed API

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,3 +33,7 @@ jobs:
         run: |
           npm install @semantic-release/changelog @semantic-release/git --ignore-scripts --no-save
           npx semantic-release
+      - name: Coveralls
+        uses: coverallsapp/github-action@v1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
