fix: ESM and CJS exports for Node 13

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
 	"main": "./build-cjs/src/main.js",
 	"module": "./build-esm/src/main.js",
 	"exports": {
+		"require": "./build-cjs/src/main.js",
 		"node": "./build-cjs/src/main.mjs",
-		"import": "./build-esm/src/main.js",
-		"require": "./build-cjs/src/main.js"
+		"import": "./build-esm/src/main.js"
 	},
 	"scripts": {
 		"test": "jest",
