--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"build:tsc:cjs": "tsc -p ./tsconfig.build-cjs.json",
 		"build:tsc:esm": "tsc -p ./tsconfig.build-esm.json",
 		"build:cpy": "cpy ./src/main.mjs ./build-cjs/src",
+		"build:smoke-test": "node ./build-cjs/src/smoke-test.js",
 		"update:psl-fixture": "ts-node --transpile-only ./src/scripts/update-psl-fixture.ts",
 		"update:tries": "ts-node --transpile-only ./src/scripts/update-tries.ts -- ../../serialized-tries",
 		"update:dependencies": "updtr"
