--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,23 +24,25 @@ jobs:
         with:
           path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-      - name: npm install
+      - name: Install dependencies
         run: |
           npm ci --ignore-scripts
-      - name: update tries
+      - name: Update tries
         run: |
           npm run update:tries
-      - name: test
+      - name: Test
         run: |
           npm test
-      - name: semantic-release
+        env:
+          CI: true
+      - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           npm install @semantic-release/changelog @semantic-release/git --ignore-scripts --no-save
           npx semantic-release
-      - name: Coveralls
-        uses: coverallsapp/github-action@v1
+      - name: Save test coverage
+        uses: coverallsapp/github-action@v1.0.1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
