--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,17 +23,15 @@ jobs:
         with:
           path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-      - name: npm install
+      - name: Install dependencies
         run: |
           npm ci --ignore-scripts
-        env:
-          CI: true
-      - name: npm test
+      - name: Test
         run: |
           npm test
         env:
           CI: true
-      - name: Coveralls
-        uses: coverallsapp/github-action@v1
+      - name: Save test coverage
+        uses: coverallsapp/github-action@v1.0.1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
