--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
 			"type": "node",
 			"name": "vscode-jest-tests",
 			"request": "launch",
-			"args": ["--runInBand"],
+			"args": ["--runInBand", "--coverage=false"],
 			"cwd": "${workspaceFolder}",
 			"console": "integratedTerminal",
 			"internalConsoleOptions": "neverOpen",
