--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,6 @@ node_modules
 # Optional REPL history
 .node_repl_history
 
-# We don't check in the compiled lists. They are created upon npm publish and npm install.
-build/tries
-
-# Don't include the build target directory.
-lib
+# We don't check in compiled files. They are created upon npm publish and npm install.
+build-esm
+build-cjs
