--- a/package.json
+++ b/package.json
@@ -1,65 +1,86 @@
 {
-  "name": "parse-domain",
-  "version": "2.3.4",
-  "description": "Splits an url into sub-domain, domain and effective top-level-domain",
-  "main": "./lib/parseDomain.js",
-  "types": "./src/index.d.ts",
-  "scripts": {
-    "build": "run-s build:lib build:tries",
-    "build:lib": "run-s build:lib:clean build:lib:babel",
-    "build:lib:clean": "rimraf lib",
-    "build:lib:babel": "babel src --out-dir lib",
-    "build:tries": "node scripts/build-tries.js",
-    "postinstall": "run-s build:tries",
-    "prepublish": "run-s build",
-    "release": "standard-version",
-    "pretest": "run-s build:lib:clean pretest:link",
-    "pretest:link": "node scripts/link-src.js",
-    "test": "jest",
-    "posttest": "eslint src test",
-    "update": "updtr"
-  },
-  "keywords": [
-    "domain",
-    "url",
-    "sub-domain",
-    "tld",
-    "parse",
-    "extract",
-    "sanitize",
-    "country",
-    "top-level"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/peerigon/parse-domain.git"
-  },
-  "author": "peerigon <developers@peerigon.com>",
-  "license": "Unlicense",
-  "dependencies": {
-    "got": "^8.3.2",
-    "jest": "^24.9.0",
-    "mkdirp": "^0.5.1",
-    "npm-run-all": "^4.1.5"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "eslint": "^5.16.0",
-    "eslint-config-peerigon": "^17.1.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsdoc": "^4.8.4",
-    "rimraf": "^2.6.3",
-    "standard-version": "^6.0.1",
-    "updtr": "^3.1.0"
-  },
-  "files": [
-    "lib",
-    "scripts",
-    "lists",
-    "test",
-    "build",
-    "src/index.d.ts"
-  ]
+	"name": "parse-domain",
+	"version": "2.3.2",
+	"description": "Splits a hostname into subdomains, domain and (effective) top-level domains",
+	"keywords": [
+		"domain",
+		"url",
+		"sub-domain",
+		"tld",
+		"parse",
+		"sanitize",
+		"top-level"
+	],
+	"main": "./build-cjs/src/main.js",
+	"module": "./build-esm/src/main.js",
+	"exports": {
+		"require": "./build-cjs/src/main.js",
+		"node": "./build-cjs/src/main.mjs",
+		"import": "./build-esm/src/main.js"
+	},
+	"scripts": {
+		"test": "jest",
+		"posttest": "run-s build posttest:*",
+		"posttest:lint": "eslint *.js src bin --ext js,ts",
+		"build": "run-s build:*",
+		"build:cleanup": "rimraf build-cjs build-esm",
+		"build:tsc": "run-p build:tsc:cjs build:tsc:esm",
+		"build:tsc:cjs": "tsc -p ./tsconfig.build-cjs.json",
+		"build:tsc:esm": "tsc -p ./tsconfig.build-esm.json",
+		"build:cpy": "cpy ./src/main.mjs ./build-cjs/src",
+		"build:smoke-test": "node ./build-cjs/src/smoke-test.js",
+		"update:psl-fixture": "ts-node --transpile-only ./src/scripts/update-psl-fixture.ts",
+		"update:tries": "ts-node --transpile-only ./src/scripts/update-tries.ts -- ../../serialized-tries",
+		"update:dependencies": "updtr"
+	},
+	"bin": {
+		"parse-domain-update": "./bin/update.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/peerigon/parse-domain.git"
+	},
+	"author": "peerigon <developers@peerigon.com>",
+	"license": "Unlicense",
+	"files": [
+		"bin",
+		"build-cjs",
+		"build-esm"
+	],
+	"sideEffects": false,
+	"dependencies": {
+		"is-ip": "^3.1.0",
+		"node-fetch": "^2.6.0",
+		"punycode": "^2.1.1"
+	},
+	"devDependencies": {
+		"@types/jest": "^25.2.1",
+		"@types/node": "^13.11.0",
+		"@types/node-fetch": "^2.5.5",
+		"@types/punycode": "^2.1.0",
+		"@typescript-eslint/eslint-plugin": "^2.26.0",
+		"@typescript-eslint/parser": "^2.26.0",
+		"cpy-cli": "^3.1.0",
+		"eslint": "^6.8.0",
+		"eslint-config-peerigon": "^27.6.0",
+		"eslint-import-resolver-typescript": "^2.0.0",
+		"eslint-plugin-no-null": "^1.0.2",
+		"eslint-plugin-prefer-arrow": "^1.1.7",
+		"husky": "^4.2.3",
+		"jest": "^25.2.7",
+		"nock": "^12.0.3",
+		"npm-run-all": "^4.1.5",
+		"prettier": "^2.0.2",
+		"pretty-quick": "^2.0.1",
+		"rimraf": "^3.0.2",
+		"ts-jest": "^25.3.1",
+		"ts-node": "^8.8.2",
+		"typescript": "^3.8.3",
+		"updtr": "^3.1.0"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "pretty-quick --staged"
+		}
+	}
 }
